--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "react-select": "^5.3.2",
     "sweetalert2": "^11.4.18",
     "util": "^0.12.4",
     "web-vitals": "^2.1.4",
